# bookshelf

./: README.md  pyproject.toml
app/: db.sqlite3
app/app/: settings.py  urls.py
app/books/: admin.py  forms.py  models.py  urls.py  views.py
app/books/migrations/: 0001_initial.py  0002_book_user.py  0003_remove_book_user_ownedbook.py  0004_remove_book_shelf_ownedbook_shelf.py  0005_book_cover_image.py  0006_alter_book_cover_image.py  0007_alter_book_cover_image.py  0008_ownedbook_genre_ownedbook_rating_ownedbook_status_and_more.py  0009_book_cover_image_link.py
app/templates/: base.html
app/templates/books/: add_book.html  mybooks.html  search_book.html  shelves.html
app/templates/user/: login.html  template_activate_account.html
app/user/: views.py
bookshelf/bookshelf/: settings.py
