[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["Bastian"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2 = "^2.9.10"
django-environ = "^0.11.2"
requests = "^2.32.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
